# go2-navigation

./: .gitignore  README.md  constraints.mat  debugging_dtmpc.csv  nearest_data.mat  plot_mpc_traj.m  requirements.txt  setup.sh  vis_dearest_data.m
.devcontainer/gpu/: devcontainer.json
.devcontainer/no_gpu/: devcontainer.json
docker/: Dockerfile  docker-compose-no-gpu.yml  docker-compose.yml  docker_setup.sh  requirements.txt
go2_dyn_tube_mpc/: package.xml  setup.cfg  setup.py
go2_dyn_tube_mpc/config/: dynamic_tube_mpc.yml  high_level_test.yml
go2_dyn_tube_mpc/go2_dyn_tube_mpc/: casadi_utils.py  dyn_tube_mpc_node.py  dynamic_tube_mpc.py  exploration.py  high_level_planner.py  high_level_planner_node.py  load_tube_model.py  map_handler.py  map_utils.py  tmp.py  trajectory_tracker.py  trajectory_tracker_node.py
go2_dyn_tube_mpc/scripts/: astar_test.py  ca_interp.py  display_solve_data.m  dtmpc_test.py  dynamic_tube_mpc_sdf.py  inflation_test.py  map_handler_test.py  sdf_trial.py
go2_dyn_tube_mpc_msgs/: CMakeLists.txt  package.xml
go2_dyn_tube_mpc_msgs/msg/: Trajectory.msg
go2_estimation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
go2_estimation/include/: unitree_go2_odom_estimator.h
go2_estimation/src/: unitree_go2_odom_estimator.cpp
go2_high_level_planning/: package.xml  setup.cfg  setup.py
go2_nav_msgs/: CMakeLists.txt  package.xml
go2_rl_vel_tracking/: package.xml  setup.cfg  setup.py
go2_slam_launch/: launch_slam.py
testing/: package.xml  setup.py
testing/testing/: mimic_slam_robot.py  scan_test.py
utils/: map_utils.py
(+14 files in other folders)
