<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wdc3iii@gmail.com">wcompton</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Dependencies required at build and runtime -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>map_msgs</depend>  <!-- Needed for OccupancyGridUpdate -->
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
